--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -27,6 +27,7 @@ markdown: kramdown
 theme: jekyll-theme-cayman
 plugins:
   - jekyll-feed
+  - jekyll-plantuml
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
